// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShodanTimelineBlock> renders as expected 1`] = `
<div
  className="shodan-map__item   "
  data-index=""
  data-tooltip="Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;

exports[`<ShodanTimelineBlock> renders as expected with current section highlighted 1`] = `
<div
  className="shodan-map__item pointer shodan-map__item--active "
  data-index=""
  data-tooltip="Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;

exports[`<ShodanTimelineBlock> renders as expected with startTime 1`] = `
<div
  className="shodan-map__item   "
  data-index=""
  data-tooltip="Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;

exports[`<ShodanTimelineBlock> renders as expected with subdivision info 1`] = `
<div
  className="shodan-map__item   dan-5"
  data-index=""
  data-tooltip="Shite Exits: Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;

exports[`<ShodanTimelineBlock> renders as expected with url 1`] = `
<div
  className="shodan-map__item pointer  "
  data-index=""
  data-tooltip="Kiri"
  onClick={[Function]}
  onKeyPress={null}
  role="link"
  style={
    Object {
      "height": "71.42857142857143%",
      "width": "33.33333333333333%",
    }
  }
  tabIndex={0}
/>
`;
